; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/hineybush/hineyg80/extr_hineyg80.c_led_set_kb.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/hineybush/hineyg80/extr_hineyg80.c_led_set_kb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@USB_LED_NUM_LOCK = common dso_local global i32 0, align 4
@C6 = common dso_local global i32 0, align 4
@USB_LED_CAPS_LOCK = common dso_local global i32 0, align 4
@B6 = common dso_local global i32 0, align 4
@USB_LED_SCROLL_LOCK = common dso_local global i32 0, align 4
@B5 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @led_set_kb(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @USB_LED_NUM_LOCK, align 4
  %5 = call i64 @IS_LED_ON(i32 %3, i32 %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %1
  %8 = load i32, i32* @C6, align 4
  %9 = call i32 @writePinHigh(i32 %8)
  br label %13

10:                                               ; preds = %1
  %11 = load i32, i32* @C6, align 4
  %12 = call i32 @writePinLow(i32 %11)
  br label %13

13:                                               ; preds = %10, %7
  %14 = load i32, i32* %2, align 4
  %15 = load i32, i32* @USB_LED_CAPS_LOCK, align 4
  %16 = call i64 @IS_LED_ON(i32 %14, i32 %15)
  %17 = icmp ne i64 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %13
  %19 = load i32, i32* @B6, align 4
  %20 = call i32 @writePinHigh(i32 %19)
  br label %24

21:                                               ; preds = %13
  %22 = load i32, i32* @B6, align 4
  %23 = call i32 @writePinLow(i32 %22)
  br label %24

24:                                               ; preds = %21, %18
  %25 = load i32, i32* %2, align 4
  %26 = load i32, i32* @USB_LED_SCROLL_LOCK, align 4
  %27 = call i64 @IS_LED_ON(i32 %25, i32 %26)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %32

29:                                               ; preds = %24
  %30 = load i32, i32* @B5, align 4
  %31 = call i32 @writePinHigh(i32 %30)
  br label %35

32:                                               ; preds = %24
  %33 = load i32, i32* @B5, align 4
  %34 = call i32 @writePinLow(i32 %33)
  br label %35

35:                                               ; preds = %32, %29
  %36 = load i32, i32* %2, align 4
  %37 = call i32 @led_set_user(i32 %36)
  ret void
}

declare dso_local i64 @IS_LED_ON(i32, i32) #1

declare dso_local i32 @writePinHigh(i32) #1

declare dso_local i32 @writePinLow(i32) #1

declare dso_local i32 @led_set_user(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
